# ShotAssetManager

./: CMakeLists.txt  CMakePresets.json  README.md
src/: USDManager.cpp  USDManager.h  main.cpp
ui/: main.qml
